# matvetcg-chen-zhang-guo

./: .gitignore  .gitmodules  README.md  gitignore.txt  notes.md  yingzhang's work.key  yingzhang's work.pptx
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  CMakeLists_GITHUBWORKFLOW.txt
src/algorithms/: bicgstab.hpp  cg.hpp  cg_mpi.hpp
src/cmake_shared/: cmake-common.cmake
src/demo/: eigen_spmat.cpp  eigen_spmat_mpi_test.cpp  eigen_structure_map_test.cpp  matrix_with_vec_support_ls_test.cpp  mpi_eigen_matrix_test.cpp  mpi_eigen_sparse_matrix_test.cpp  mpi_matrix_test.cpp  vector_test.cpp
src/inputs/: 0_2fill_size1000.mtx  README.md  test.mtx  test15.mtx  test25.mtx  test35.mtx  test45.mtx
src/logs/: README.md  objective_2_plotter_i9.py  plot_objective2.py  plot_objective2_i7.py  plot_objective3.py  plot_objective3_i7.py  plot_objective3_i9.py  requirements.txt
src/objective1/: main.cpp
src/objective2/: main.cpp  test.py
src/objective3/: main.cpp
src/objective5/: spai.hpp  spai_debug.hpp  spai_mbase.hpp  spai_mpi.hpp  spai_openmp.hpp  test01.cpp  test02.cpp  test_baseline.cpp  test_mbase.cpp  test_mbase_mpi.cpp  test_mpi.cpp  test_openmp.cpp  test_original.cpp  test_spai.cpp  test_tools.cpp  tools.hpp
src/objective_one/: CMakeLists.txt  README.md  main.cpp
src/scripts/: objective2.py  objective3.py  run_all.py
src/shared/: CMakeLists.txt  EigenMatrixMap.hpp  EigenStructureMap.hpp  MPIContext.hpp  MPIMatrix.hpp  MPISparseMatrix.hpp  MatrixWIthVecSupport.cpp  MatrixWithVecSupport.hpp  PMatrix.hpp  README.md  Vector.hpp  assert.hpp  eigen_structure_map_test.cpp  matrix_map_test.cpp  matrix_with_vec_support_ls_test.cpp  objective_context.hpp  utils.hpp  vector_test.cpp
